Added VM option information