@@ -4,3 +4,6 @@
 #### Application features
 - Creation - UID for parts/products
 - Modification, and deleting of parts/products
+
+Helpful info to run program
+-Additional VM option "--module-path (insert path of JavaFX SDK) --add-modules javafx.controls,javafx.fxml,javafx.graphics"
